<resources>
    <string name="app_name">English Helper</string>

    <string name="delete">Delete</string>
    <string name="all">All</string>
    <string name="edit">Edit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="my_dictionary">My dictionary</string>
    <string name="test">Test</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_word">Enter word</string>
    <string name="enter_translate">Enter translate</string>
    <string name="or">or</string>
    <string name="find_translate">Find translate</string>
    <string name="random">Random</string>


    <string name="select_correct">Select the correct translation of the word</string>

    <string name="warning_name_empty">Name cannot be empty</string>
    <string name="warning_name_lowercase">Name should start from an uppercase letter</string>
    <string name="warning_email_empty">Email cannot be empty</string>
    <string name="warning_email_invalid">Invalid email format</string>
    <string name="warning_password_empty">Password cannot be empty</string>
    <string name="warning_passwords_do_not_match">Passwords do not match</string>

    <!-- text labels -->
    <string name="label_name">Name</string>
    <string name="label_email">Email address</string>
    <string name="label_password">Password</string>

    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="register_prompt">Do not have an account? Register now</string>
    <string name="register_link">Register</string>
    <string name="loading_empty">Loading…</string>

    <string name="info_logged_in">Logged in. ObjectId: %s</string>
    <string name="loading_login">Logging in…</string>
    <string name="loading_words">Loading words …</string>

    <string name="action_logout">Logout</string>


</resources>
