<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cyborg.englishhelper.AddWordFragment">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editWord"
        android:hint="@string/enter_word"
        android:layout_gravity="center_horizontal|top" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTranslate"
        android:hint="@string/enter_translate"
        android:layout_gravity="left|center_vertical" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/findTr"
        android:text="@string/find_translate"
        android:layout_gravity="right|center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:id="@+id/textView2"
        android:layout_gravity="center" />
</FrameLayout>
